# agents4impact

./: .gitignore  AGENT_PAYMENTS.md  AUTHENTICATION.md  BLOCKCHAIN_SETUP.md  CONTRIBUTING.md  Dockerfile  GET_CREDENTIALS.md  Makefile  NEXT_STEPS.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SETUP_MCP_TICKETS.md  TROUBLESHOOTING.md  WALLET_SETUP.md  a2a_server.py  check_config.py  client_example.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  web_server.py
agents/: __init__.py  base_agent.py  bigquery_agent.py  maps_agent.py  orchestrator.py  ticket_agent.py  ticket_agent_new.py  ticket_agent_old.py
credentials/: README.md
logs/: pids.txt
mcp-ticket-server/: README.md
mcp-ticket-server/src/: blockchain.ts  data.ts  index.ts  server.ts  types.ts
scripts/: setup.sh  start_all_agents.sh  stop_all_agents.sh
tests/: __init__.py  test_agents.py
web/: app.js  index.html  style.css  test.html
